csd: Fix close button bg color on Firefox themes
Fixes #583

--- a/theme/parts/csd.css
+++ b/theme/parts/csd.css
@@ -151,15 +151,15 @@
 }
 :root[tabsintitlebar] #titlebar:-moz-window-inactive .titlebar-button,
 :root[tabsintitlebar][inFullscreen] #window-controls:-moz-window-inactive toolbarbutton {
-	background: var(--gnome-inactive-tabbar-tab-active-background);
+	background: var(--gnome-inactive-tabbar-tab-active-background) !important;
 }
 :root[tabsintitlebar] #titlebar:not(:-moz-window-inactive) .titlebar-button:not([disabled]):hover,
 :root[tabsintitlebar][inFullscreen] #window-controls:not(:-moz-window-inactive) toolbarbutton:not([disabled]):hover {
-	background: var(--gnome-button-hover-background);
+	background: var(--gnome-button-hover-background) !important;
 }
 :root[tabsintitlebar] #titlebar:not(:-moz-window-inactive) .titlebar-button:not([disabled]):active,
 :root[tabsintitlebar][inFullscreen] #window-controls:not(:-moz-window-inactive) toolbarbutton:not([disabled]):active {
-	background: var(--gnome-button-active-close-background);
+	background: var(--gnome-button-active-close-background) !important;
 }
 
 :root[tabsintitlebar] #titlebar .titlebar-button:where(:hover):not(:hover) {
